2002-02-12  Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: fixed thread::preserve glitch. We never
	actually did bump the reservation counter by a silly mistake.

2002-02-12  Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: added thread::preserve and thread::release
	commands. These allow for a simple reference counting when creating
	and/or tearing-down threads. Instead of calling thread::unwind in
	the target thread, one can use "thread::release id" to displose it.
	This is much easier to use and it can be coupled with calls to
	thread::preserve to implement simple thread reservation scenario.

	* doc/thread.n: added docs for thread::preserve/thread::release
	
2002-02-09  Zoran Vasiljevic <zoran@archiware.com>

	* generic/threadCmd.c: added thread::configure interface.
	Currently only "-eventmark" option is supported.
	Allows for AOLserver builds to change the "thread::" prefix
	by re-defining the "NS" compile-time constant.

	* doc/thread.n: added docs for thread::configure

2002-02-06  Zoran Vasiljevic <zoran@archiware.com>

	* generic/aolserv.cpp: (new) added for loading into the AOLserver.
	Still needs to fix the Makefile and friends to get it up and
	running.

	* generic/threadCmd.c: added conditional setup of the command
 	prefix. Now, the "NS" can be used to select the command prefix
 	for thread::* commands.

2002-01-26  David Gravereaux <davygrvy@pobox.com>

	* generic/threadSvCmd.c:  A small 'const' qualifier change to remove a
	warning.  It's a bit more wordy now, but reads a little clearer to me.
	Unscambling pointer math gives me a headache and combined with a cast
	tends to get dangerous.

	* win/threadWin.c: new idea for thread::kill added.  It's wrapped in an
	#if 0/#endif for now.  I do notice that tcl.h is now typedef'ing
	ClientData as an 'int *'.  It used to 'void *', didn't it??  The
	ISO/ANSI/CLEAN C style of setting a typed pointer to a void* now doesn't